Update to continuously track

--- a/static/location.html
+++ b/static/location.html
@@ -7,7 +7,10 @@
   <title>Location</title>
 </html>
 <body>
-  <button id="startstop" onclick="startStop()">Start</button>
-  <p id="lat"></p>
-  <p id="long"></p>
+  <div style="width: 50%; margin: 0 auto; text-align: center; height: 50%;">
+    <button id="startstop" onclick="startStop()" style="width: 100%; height: 100%; font-size: 40px;"
+    >Start</button>
+    <p id="lat"></p>
+    <p id="long"></p>
+  </div>
 </body>
